Added content on home page

--- a/index.html
+++ b/index.html
@@ -178,15 +178,51 @@
 
     <main class="container-fluid">
 
-      <section id="part_1" class="py-5 bg-hero row justify-content-center">
+      <section id="part_1" class="py-4 bg-hero row justify-content-center">
         <div class="col-12 col-lg-11 col-xxl-10">
           <h1 class="display-1 lh-1 text-center m-5 text-light">Welcome to the PRJ4 Production Guide</h1>
           <ul class="d-flex justify-content-evenly flex-wrap list-unstyled">
             <li>
-              <a class="btn btn-danger fs-4 m-2" href="part-1.html"><span class="badge text-danger rounded-pill bg-white">Part 1</span> Publish your first page</a>
+              <a class="btn btn-danger fs-4 m-2 d-flex align-items-center text-start" href="part-1.html">
+                <span class="badge text-danger rounded-pill bg-white me-2"">Part 1</span>
+                <span>Publish your first page</span>
+              </a>
             </li>
             <li>
-              <a class="btn btn-danger fs-4 m-2" href="part-2.html"><span class="badge text-danger rounded-pill bg-white">Part 2</span> Edit the contents of your page</a>
+              <a class="btn btn-danger fs-4 m-2 d-flex align-items-center text-start" href="part-2.html">
+                <span class="badge text-danger rounded-pill bg-white me-2"">Part 2</span>
+                <span>Edit the contents of your page</span>
+              </a>
+            </li>
+            <li>
+              <a class="btn btn-danger fs-4 m-2 d-flex align-items-center text-start" href="part-4.html">
+                <span class="badge text-danger rounded-pill bg-white me-2"">Part 4</span>
+                <span>Towards your group website</span>
+              </a>
+            </li>
+            <li>
+              <a class="btn btn-danger fs-4 m-2 d-flex align-items-center" href="checklist-individual.html">
+                <img class="me-2" src="images/common/clipboard-check.svg" width="18" alt="Checklist icon">
+                <span>Individual Assignment Checklist</span>
+              </a>
+            </li>
+            <li>
+              <a class="btn btn-danger fs-4 m-2 d-flex align-items-center" href="checklist-group.html">
+                <img class="me-2" src="images/common/clipboard-check.svg" width="18" alt="Checklist icon">
+                <span>Group Assignment Checklist</span>
+              </a>
+            </li>
+            <li>
+              <a class="btn btn-danger fs-4 m-2 d-flex align-items-center" href="https://web.microsoftstream.com/channel/987d2668-18d7-4d84-9342-4774e7d0ba94" target="_blank">
+                <img class="me-2" src="images/common/film.svg" width="18" alt="Film icon">
+                <span>Videos on Microsoft Stream</span>
+              </a>
+            </li>
+            <li>
+              <a class="btn btn-primary fs-4 m-2 d-flex align-items-center" data-bs-toggle="offcanvas" href="#searchOffcanvas" role="button" aria-controls="searchOffcanvas">
+                <img class="me-2" src="images/common/search.svg" width="18" alt="Film icon">
+                <span>Search this website</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -230,13 +266,13 @@
                 <a href="part-1.html#cybersecurity">Cybersecurity and privacy</a>
               </li>
               <li>
-                <a href="part-1.html#setting_up_tools">Setting up the tools</a>
+                <a href="part-1.html#setting_up_tools">Set up the tools</a>
               </li>
               <li>
                 <a href="part-1.html#basic_html">The basic structure of HTML</a>
               </li>
               <li>
-                <a href="part-1.html#editing_publishing">Editing and publishing</a>
+                <a href="part-1.html#editing_publishing">Edit and publish</a>
               </li>
             </ol>
           </div>
@@ -287,6 +323,56 @@
               </li>
               <li>
                 <a href="part-2.html#manage_images">Manage images</a>
+              </li>
+            </ol>
+          </div>
+        </article>
+      </section>
+
+      <section id="p_4">
+        <header class="section-header justify-content-center text-light bg-gradient py-5 row">
+          <div class="col-xxl-10">
+            <h2 class="display-3 fw-bolder lh-1 mb-4">
+              
+                <a href="part-1.html" class="badge rounded-pill bg-buas text-decoration-none">Part 4</a>
+                <a href="part-1.html" class="text-light">Towards your group website</a>
+              
+            </h2>
+          </div>
+        </header>
+        <article class="row justify-content-center">
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="color-buas text-center">Objectives</h3>
+            <h5>
+              <img class="me-1" src="images/common/trophy.svg" width="16" alt="trophy icon">
+              At the end of this part, you will be able to:
+            </h5>
+            <ul>
+              <li>Use the provided templates to achieve the group assignment.</li>
+              <li>Modify more complex elements such as carousels and grids.</li>
+              <li>Collaborate efficiently to deliver the assignment.</li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
+            <h3 class="color-blue text-center">Contents</h3>
+            <ol>
+              <li>
+                <a href="part-4.html#overview_goals">Overview & goals</a>
+              </li>
+              <li>
+                <a href="part-4.html#web_design">Your design process</a>
+              </li>
+              <li>
+                <a href="part-4.html#templates">A tour of our templates</a>
+              </li>
+              <li>
+                <a href="part-4.html#ux_patterns">UX Patterns for the web</a>
+              </li>
+              <li>
+                <a href="part-4.html#bootstrap_grid">The Bootstrap Grid</a>
+              </li>
+              <li>
+                <a href="part-4.html#collaboration">Tips for collaboration</a>
               </li>
             </ol>
           </div>
