--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
 
     <title>PRJ4 Guide</title>
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
 
     <nav id="main-nav" class="bg-secondary bg-gradient p-1 justify-content-start">
       <ul class="nav nav-pills align-items-center">
@@ -176,7 +176,7 @@
       </div>
     </div>
 
-    <main class="container-fluid">
+    <main class="container-fluid position-relative overflow-auto">
 
       <section id="part_1" class="py-4 bg-hero row justify-content-center">
         <div class="col-12 col-lg-11 col-xxl-10">
@@ -243,7 +243,6 @@
           <div class="col-md-6 col-xxl-5 py-3">
             <h3 class="color-buas text-center">Objectives</h3>
             <h5>
-              <img class="me-1" src="images/common/trophy.svg" width="16" alt="trophy icon">
               At the end of this part, you will be able to:
             </h5>
             <ul>
@@ -294,7 +293,6 @@
           <div class="col-md-6 col-xxl-5 py-3">
             <h3 class="color-buas text-center">Objectives</h3>
             <h5>
-              <img class="me-1" src="images/common/trophy.svg" width="16" alt="trophy icon">
               At the end of this part, you will be able to:
             </h5>
             <ul>
@@ -344,7 +342,6 @@
           <div class="col-md-6 col-xxl-5 py-3">
             <h3 class="color-buas text-center">Objectives</h3>
             <h5>
-              <img class="me-1" src="images/common/trophy.svg" width="16" alt="trophy icon">
               At the end of this part, you will be able to:
             </h5>
             <ul>
