--- a/part-2.html
+++ b/part-2.html
@@ -558,7 +558,7 @@
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/c4f103fb-dbdc-4da1-8a56-d26dfe01bfa8" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>Your browser has Developer Tools that can help you check the structure of any page.</li>
