--- a/index.html
+++ b/index.html
@@ -184,19 +184,19 @@
           <ul class="d-flex justify-content-evenly flex-wrap list-unstyled">
             <li>
               <a class="btn btn-danger fs-4 m-2 d-flex align-items-center text-start" href="part-1.html">
-                <span class="badge text-danger rounded-pill bg-white me-2"">Part 1</span>
+                <span class="badge text-danger rounded-pill bg-white me-2">Part 1</span>
                 <span>Publish your first page</span>
               </a>
             </li>
             <li>
               <a class="btn btn-danger fs-4 m-2 d-flex align-items-center text-start" href="part-2.html">
-                <span class="badge text-danger rounded-pill bg-white me-2"">Part 2</span>
+                <span class="badge text-danger rounded-pill bg-white me-2">Part 2</span>
                 <span>Edit the contents of your page</span>
               </a>
             </li>
             <li>
               <a class="btn btn-danger fs-4 m-2 d-flex align-items-center text-start" href="part-4.html">
-                <span class="badge text-danger rounded-pill bg-white me-2"">Part 4</span>
+                <span class="badge text-danger rounded-pill bg-white me-2">Part 4</span>
                 <span>Towards your group website</span>
               </a>
             </li>
