Alignment and font improvements

--- a/checklist-group.html
+++ b/checklist-group.html
@@ -274,10 +274,10 @@
                 <th>Assessment indicators</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody class="align-middle">
               <tr class="bg-success bg-opacity-25">
-                <th colspan="2" rowspan="2" class="text-center align-middle">Pre-requisites</th>
-                <td class="text-center align-middle">
+                <th colspan="2" rowspan="2" class="text-center">Pre-requisites</th>
+                <td class="text-center">
                   <h6>Pass/Fail</h6>
                   <p class="fs-1 lh-1 m-0">
                     <input class="form-check-input m-0" type="checkbox" value="" aria-label="Content updated">
@@ -286,7 +286,7 @@
                 <td>The website is accessible publicly through GitHub pages.</td>
               </tr>
               <tr class="bg-success bg-opacity-10">
-                <td class="text-center align-middle">
+                <td class="text-center">
                   <h6>Pass/Fail</h6>
                   <p class="fs-1 lh-1 m-0">
                     <input class="form-check-input m-0" type="checkbox" value="" aria-label="Content updated">
@@ -295,12 +295,12 @@
                 <td>A scan of a paper prototype is delivered.</td>
               </tr>
               <tr class="bg-primary bg-opacity-25">
-                <th rowspan="6" class="text-center align-middle bg-info bg-opacity-25">
+                <th rowspan="6" class="text-center bg-info bg-opacity-25">
                   <p class="fst-italic fw-normal m-0">Elements assessed directly via</p>
                   <p>Website</p>
                 </th>
-                <th rowspan="3" class="text-center align-middle">Visual qualities</th>
-                <td rowspan="3" class="text-center align-middle">
+                <th rowspan="3" class="text-center">Visual qualities</th>
+                <td rowspan="3" class="text-center">
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
@@ -313,8 +313,8 @@
                 <td>Uses visual elements (logos, illustrations, photos, infographics, fonts, colours) and design principles to communicate efficiently and concisely and create a distinctive atmosphere.</td>
               </tr>
               <tr class="bg-info bg-opacity-10">
-                <th rowspan="3" class="text-center align-middle">Technical qualities</th>
-                <td rowspan="3" class="text-center align-middle">
+                <th rowspan="3" class="text-center">Technical qualities</th>
+                <td rowspan="3" class="text-center">
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
@@ -327,12 +327,12 @@
                 <td>Uses contrast, font sizes and font families to achieve good legibility at all screen sizes from mobile to desktop.</td>
               </tr>
               <tr class="bg-warning bg-opacity-25">
-                <th rowspan="5" class="text-center align-middle bg-danger bg-opacity-10">
+                <th rowspan="5" class="text-center bg-danger bg-opacity-10">
                   <p class="fst-italic fw-normal m-0">Elements assessed through</p>
                   <p>Justification document</p>
                 </th>
-                <th rowspan="2" class="text-center align-middle">Website justifications</th>
-                <td rowspan="2" class="text-center align-middle">
+                <th rowspan="2" class="text-center">Website justifications</th>
+                <td rowspan="2" class="text-center">
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
@@ -342,8 +342,8 @@
                 <td>Clearly relates the design elements and their justifications with the purpose of the website as part of marketing, the vision and mission of the brand, and the elements developed in the lean canvas.</td>
               </tr>
               <tr class="bg-danger bg-opacity-25">
-                <th rowspan="3" class="text-center align-middle">Testing report</th>
-                <td rowspan="3" class="text-center align-middle">
+                <th rowspan="3" class="text-center">Testing report</th>
+                <td rowspan="3" class="text-center">
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
