--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -215,7 +215,7 @@
                 <th>Assessment indicators</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody class="align-middle">
               <tr>
                 <th>Content updated</th>
                 <td class="text-center fs-1 lh-1">
@@ -289,9 +289,9 @@
               <li>Your web page&rsquo;s URL is: <a id="weburl" href="" target="_blank"></a></li>
               <li>You can check the validity of your code at <a id="w3vurl" href="#" target="_blank"></a></li>
             </ol>
-            <div class="form-check form-switch mb-3">
-              <input type="checkbox" class="form-check-input" id="checkfield" required>
-              <label class="form-check-label" for="checkfield">I have checked the three URLs above and they all work!</label>
+            <div class="form-check form-switch mb-3 d-flex align-items-center fs-3">
+              <input type="checkbox" class="form-check-input mt-0" id="checkfield" required>
+              <label class="form-check-label fs-6 ms-2" for="checkfield">I have checked the three URLs above and they all work!</label>
             </div>
             <button type="submit" class="btn btn-lg btn-danger w-100 mb-3 d-print-none">Click here then choose &ldquo;Save as PDF&rdquo; to generate your hand-in document</button>
             <p>Please follow the naming conventions: the PDF must be named <strong><span id="file-fullname">PRJ4_2122_<span id="file-studentid"></span>_individualwebsite</span>.pdf</strong></p> 
