--- a/part-1.html
+++ b/part-1.html
@@ -1103,6 +1103,7 @@
               <li>When, and in which direction you want to synchronize them (this is called <em>pushing</em> when going from your laptop to the cloud and <em>pulling</em> when going the other way round).</li>
             </ol>
             <p>Therefore, <em>commit</em>, <em>pull</em> and <em>push</em> are three different actions within the GitHub Desktop app that you need to do in sequence.</p>
+            <p>What you do in GitHub Desktop is also independent from when you decide to save files in your text editor, so saving files is an additional essential step.</p>
             <ul>
               <li>Whenever you want to keep track of changes you have just made, you need to first <strong>save</strong> the file in Dreamweaver and then <strong>commit</strong> the file in GitHub Desktop. This only tracks changes on your laptop <u>without synchronizing them</u> and you can do this entirely offline.</li>
               <li>When you want to put a new version of your work on GitHub, whether the goal is to publish it or to allow your team mates to collaborate, you need to click on <strong>push</strong> in GitHub Desktop.</li>
