--- a/part-3.html
+++ b/part-3.html
@@ -722,14 +722,23 @@
         <article class="row justify-content-center">
 		  <!--- left column starts --->
           <div class="col-md-6 col-xxl-5 py-3">
-            <h3 class="color-buas text-center">Left Heading</h3>
+            <h3 class="color-buas text-center">Fonts in CSS</h3>
             <p>Fonts in CSS are defined with the “font-family” property. If you only use this property, you have to be careful, because you only have access to fonts that are installed. If you want to use additional fonts, you need to embed a web font in your page</p>
           </div>
 		  <!--- left column ends --->
 		  <!--- right column starts --->
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
             <h3 class="text-center">Google fonts</h3>
-            <p>xxxx.</p>
+            <p>Google Fonts is the most popular service for Web Fonts. To use one of their fonts:</p>
+			<ul>
+				<li>Go to <a href="https://fonts.google.com/" target="_blank">https://fonts.google.com/</a> and choose a font you want to use.</li>
+				<li>Click on “Select this style” (do not Download)</li>
+				<li>A sidebar opens where you can see the selected font(s) and instructions</li>
+				<li>Click on “link” and follow the instructions</li>
+				<li>Google gives you one line of code to put in your HTML file, and one to put in your CSS file.</li>
+ 			</ul>
+			<img src="images/part-3/google-fonts.gif" class="img-fluid d-block mx-auto py-3" width="350px" alt="installing google fonts">
+			<p>Please note that having Google Fonts activated on your page means that Google can track who is visiting your web site. Nothing is ever completely free!</p> 
           </div>
 		  <!--- right column ends --->	
 		  <!--- left column starts --->
