--- a/part-3.html
+++ b/part-3.html
@@ -446,6 +446,7 @@
             <h3 class="color-buas text-center">Overview</h3>
             <p>You will change the style of several elements in your CV</p>
             <p class="funky-text">In this example, we will create a class that makes the text purple, italic, aligned at the centre and with an orange underline.</p>
+            <p>If you are using the <strong>prj4-cv</strong> template, you do not need to link the HTML and CSS files, we&rsquo;ve already done it for you!</p>
             <p>To do so, we will follow these steps</p>
             <ol>
               <li>Open the relevant HTML and CSS files.</li>
